[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "espresso"
version = "0.2.0"
authors = [{name = "Alex Carlin", email = "alxcarln@gmail.com"}]
description = "Use generative AI to create highly-expressed gene sequences"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biotite",
    "torch", 
    "torchtext", 
    "numpy", 
]